# proj

./: Readme.md  deploy_contract.mjs
credential-verifier/: README.md  credential-verifier.code-workspace
credential-verifier/frontend/: .env  .env.example  deploy_contract.mjs  index.html  package-lock.json  package.json  vite.config.js
credential-verifier/frontend/src/: App.jsx  index.css  polyfills.js
credential-verifier/frontend/src/components/: Layout.jsx  NavBar.css  NavBar.jsx  StatusBadge.jsx  TransactionHistory.jsx  WalletButton.css  WalletButton.jsx
credential-verifier/frontend/src/context/: WalletContext.jsx
credential-verifier/frontend/src/hooks/: useWallet.js
credential-verifier/frontend/src/lib/: algorand.js  contract.js  (+1 more)
credential-verifier/projects/credential-verifier/: .algokit.toml  README.md  pyproject.toml
credential-verifier/projects/credential-verifier/.algokit/: .copier-answers.yml
credential-verifier/projects/credential-verifier/.algokit/sources/CredentialVerifier/: approval.teal  approval.teal.map
credential-verifier/projects/credential-verifier/smart_contracts/artifacts/credential_verifier/: CredentialVerifier.approval.puya.map  CredentialVerifier.approval.teal  credential_verifier_client.py
credential-verifier/projects/credential-verifier/smart_contracts/credential_verifier/: contract.py  deploy_config.py  package-lock.json
credential-verifier/projects/credential-verifier/smart_contracts/credential_verifier/smart_contracts/artifacts/credential_verifier/: CredentialVerifier.approval.puya.map  CredentialVerifier.arc56.json
(+7 files in other folders)
