[tool.poetry]
name = "credential-verifier"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["Ram9012 <ramanshtomar07@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^3.0"
python-dotenv = "^1.0.0"
algorand-python = "^3"
algorand-python-testing = "^1"
puyapy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

